--- a/Checkout.html
+++ b/Checkout.html
@@ -175,10 +175,10 @@
 		<p>Select your payment method</p>
 		<ul class="nav nav-pills mb-4 text-center" id="pills-tab" role="tablist">
 			<li class="nav-item">
-				<a class="nav-link active" id="pills-creditcard-tab" data-toggle="pill" href="#pills-creditcard" role="tab" aria-controls="pills-creditcard" aria-selected="true"><i class="fas fa-credit-card fa-2x"></i></a>
+				<a class="nav-link active" id="pills-creditcard-tab" data-toggle="pill" href="#pills-creditcard" role="tab" aria-controls="pills-creditcard" aria-selected="true" title="Credit Card" ><i class="fas fa-credit-card fa-2x"></i></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" id="pills-paypal-tab" data-toggle="pill" href="#pills-paypal" role="tab" aria-controls="pills-paypal" aria-selected="false"><i class="fab fa-credit-card fa-2x fa-paypal"></i></a>
+				<a class="nav-link" id="pills-paypal-tab" data-toggle="pill" href="#pills-paypal" role="tab" aria-controls="pills-paypal" aria-selected="false" title="Paypal" ><i class="fab fa-credit-card fa-2x fa-paypal"></i></a>
 			</li>
 		</ul>
 		<div class="tab-content" id="pills-tabContent">
